--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇫🇷 法国-2.69MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇨🇳 中国-2.75MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-4.60MB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12222, type: vmess, uuid: eddbceb6-a19e-324a-86ed-ecf4fe041656, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-232.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-7.94MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.19MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.22MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-6.74MB/s(Youtube:不良林), server: bpjcjapan.loseyourip.com, port: 12343, type: vmess, uuid: 546660e6-01ad-4eaa-a640-83864829f8f9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjcjapan.loseyourip.com}}
+  - {name: 🇬🇧 英国-1.22MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 158.69.167.203, port: 8080, type: vmess, uuid: 1b32668c-452f-40c3-c21c-ae3b7e4a5e64, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 158.69.167.203}}
+  - {name: 🇨🇳 中国-4.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.64MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-572.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-624.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-392.8KB/s(Youtube:不良林), server: in-tw-1.iivvppnn.info, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-1.iivvppnn.info}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-572.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-572.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-572.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-6.74MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-572.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-572.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-572.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-572.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
