--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-305.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.46MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 158.69.167.203, port: 8080, type: vmess, uuid: 1b32668c-452f-40c3-c21c-ae3b7e4a5e64, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 158.69.167.203}}
   - {name: 🇨🇳 中国-6.26MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-809.6KB/s(Youtube:不良林), server: 36.133.220.166, port: 35010, type: vmess, uuid: 92ae7550-f158-3725-b887-1666116c8db3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.46MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-186.7KB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-669.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇳🇱 荷兰-657.8KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.45MB/s(Youtube:不良林), server: 36.133.220.166, port: 35010, type: vmess, uuid: 92ae7550-f158-3725-b887-1666116c8db3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-372.9KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-385.4KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
   - {name: 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-305.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-305.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-305.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-305.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-305.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-305.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-305.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-809.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
