--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.26MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.46MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-186.7KB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-669.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇳🇱 荷兰-657.8KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.45MB/s(Youtube:不良林), server: 36.133.220.166, port: 35010, type: vmess, uuid: 92ae7550-f158-3725-b887-1666116c8db3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-372.9KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-906.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-8.06MB/s(Youtube:不良林), server: bpjcjapan.loseyourip.com, port: 12343, type: vmess, uuid: 546660e6-01ad-4eaa-a640-83864829f8f9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjcjapan.loseyourip.com}}
+  - {name: 🇨🇳 中国-965.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇨🇳 中国-385.4KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
   - {name: 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.08MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-9.86MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-186.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-669.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-657.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
