--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-254.4KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-291.1KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.82MB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: 167.88.62.68, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-450.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.82MB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.17MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.24MB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.55MB/s(Youtube:不良林), server: jp1.jjzgy.live, port: 32333, type: trojan, password: 1c3dd378-6dc3-3a81-8461-ae927cd6fb7c, sni: jp1.jjzgy.live, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-363.9KB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: sgg.2046.gq, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-254.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-254.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-254.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-254.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-254.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-254.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-254.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
